[package]
name = "mm"
version = "0.1.0"
edition = "2021"

[lib]
name = "mm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = {version="3.1.8",features=["cargo"]}
clap_derive = "3.1.7"
#mmap-rs = "0.3.0"
libc = "0.2.121" 
rhexdump = "0.1.1"

